neue Klassen geschrieben und testDatei hinzugefügt

--- a/HoursOfWork/HoursOfWork.csproj
+++ b/HoursOfWork/HoursOfWork.csproj
@@ -95,6 +95,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HoursOfWorkLib\HoursOfWorkLib.csproj">
+      <Project>{1c9360de-8a84-488e-ab3e-e218d2b48edf}</Project>
+      <Name>HoursOfWorkLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
